--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,61 +1,102 @@
 html {
+  margin: 0;
+  padding: 0;
   font-size: 50px;
 }
+
 a {
   text-decoration: none;
 }
+
 @media screen and (min-width: 320px) {
   html {
     font-size: 21.33333333px;
   }
 }
+
 @media screen and (min-width: 360px) {
   html {
     font-size: 24px;
   }
 }
+
 @media screen and (min-width: 375px) {
   html {
     font-size: 25px;
   }
 }
+
 @media screen and (min-width: 384px) {
   html {
     font-size: 25.6px;
   }
 }
+
 @media screen and (min-width: 400px) {
   html {
     font-size: 26.66666667px;
   }
 }
+
 @media screen and (min-width: 414px) {
   html {
     font-size: 27.6px;
   }
 }
+
 @media screen and (min-width: 424px) {
   html {
     font-size: 28.26666667px;
   }
 }
+
 @media screen and (min-width: 480px) {
   html {
     font-size: 32px;
   }
 }
+
 @media screen and (min-width: 540px) {
   html {
     font-size: 36px;
   }
 }
+
 @media screen and (min-width: 720px) {
   html {
     font-size: 48px;
   }
 }
+
 @media screen and (min-width: 750px) {
   html {
     font-size: 50px;
+  }
+}
+
+
+@media screen and (orientation: portrait) {
+
+  html {
+    position: absolute;
+    width: 100vh;
+    height: 100vw;
+    top: 0;
+    left: 100vw;
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+    transform-origin: 0% 0%;
+  }
+}
+
+@media screen and (orientation: landscape) {
+  html {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
   }
 }
