--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -62,6 +62,12 @@ a {
   }
 }
 
+@media screen and (min-width: 600px) {
+  html {
+    font-size: 11px;
+  }
+}
+
 @media screen and (min-width: 720px) {
   html {
     font-size: 15px;
@@ -70,7 +76,7 @@ a {
 
 @media screen and (min-width: 750px) {
   html {
-    font-size: 14px;
+    font-size: 13px;
   }
 }
 
