--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -80,6 +80,12 @@ a {
   }
 }
 
+@media screen and (min-width: 1080px) {
+  html {
+    font-size: 20px;
+  }
+}
+
 
 @media screen and (orientation: portrait) {
 
