--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -4,6 +4,16 @@ html {
   font-size: 16px;
 }
 
+html,
+body,
+#app {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 a {
   text-decoration: none;
 }
